--- a/dash_quest/pubspec.yaml
+++ b/dash_quest/pubspec.yaml
@@ -19,6 +19,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  fimber:
+  dime:
+  path_provider:
+  shared_preferences:
+  cached_network_image:
+  sembast:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
