--- a/dash_quest/pubspec.yaml
+++ b/dash_quest/pubspec.yaml
@@ -19,12 +19,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  fimber:
+  flutter_fimber:
   dime:
   path_provider:
   shared_preferences:
   cached_network_image:
   sembast:
+  json_serializable: ^2.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -34,6 +35,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  build_runner: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
@@ -47,7 +49,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/questions.json
+    - assets/articles.json
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
