--- a/dash_quest/pubspec.yaml
+++ b/dash_quest/pubspec.yaml
@@ -53,6 +53,7 @@ flutter:
     - assets/questions.json
     - assets/articles.json
     - images/ButtonExpand.jpg
+    - images/end_survey.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
