--- a/dash_quest/pubspec.yaml
+++ b/dash_quest/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   shared_preferences:
   cached_network_image:
   sembast:
-
+  webview_flutter:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
